[gd_scene load_steps=3 format=3 uid="uid://bmpnvqfxp7x7f"]

[ext_resource type="Script" path="res://scripts/levels/GameLevel.gd" id="1_level_script"]
[ext_resource type="Script" path="res://scripts/LevelGenerator.gd" id="2_level_generator"]

[node name="GameLevel" type="Node2D"]
script = ExtResource("1_level_script")

[node name="LevelGenerator" type="Node" parent="."]
script = ExtResource("2_level_generator")

[node name="TileMapLayer" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="TileMapLayer"]
z_index = -1

[node name="ObjectLayer" type="Node2D" parent="."]

[node name="Props" type="Node2D" parent="ObjectLayer"]

[node name="Decorations" type="Node2D" parent="ObjectLayer"]

[node name="Lighting" type="Node2D" parent="ObjectLayer"]

[node name="GameplayLayer" type="Node2D" parent="."]

[node name="PlayerSpawns" type="Node2D" parent="GameplayLayer"]

[node name="EnemySpawns" type="Node2D" parent="GameplayLayer"]

[node name="BossSpawn" type="Marker2D" parent="GameplayLayer"]

[node name="Players" type="Node2D" parent="GameplayLayer"]

[node name="Enemies" type="Node2D" parent="GameplayLayer"]

[node name="Boss" type="Node2D" parent="GameplayLayer"]

[node name="Projectiles" type="Node2D" parent="GameplayLayer"]

[node name="Pickups" type="Node2D" parent="GameplayLayer"]

[node name="Effects" type="Node2D" parent="GameplayLayer"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="LevelHUD" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="Panel" parent="UILayer/LevelHUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/LevelHUD/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="LevelTitle" type="Label" parent="UILayer/LevelHUD/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level 1: Cavern Depths"
vertical_alignment = 1

[node name="ObjectiveLabel" type="Label" parent="UILayer/LevelHUD/TopBar/HBoxContainer"]
layout_mode = 2
text = "Objective: Defeat all enemies"
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UILayer/LevelHUD/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 0.0

[node name="BossWarning" type="Panel" parent="UILayer/LevelHUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
visible = false

[node name="BossLabel" type="Label" parent="UILayer/LevelHUD/BossWarning"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "BOSS APPROACHING!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioManager" type="Node" parent="."]

[node name="AmbientSound" type="AudioStreamPlayer2D" parent="AudioManager"] 